# auto-launch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  linux.rs  macos.rs  windows.rs
test-exe/: Cargo.toml
tests/: test.rs
