[package]
name = "auto-launch"
version = "0.1.1"
edition = "2021"
authors = ["zzzgydi <segydi@foxmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzgydi/auto-launch.git"
keywords = ["launch", "auto-launch", "startup", "login", "login-items"]
description = "Auto launch any application or executable at startup. Supports Windows, Macos, and Linux."
exclude = ["/test-exe"]

[target."cfg(not(target_os = \"windows\"))".dependencies]
dirs = "4.0"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.10" }
