[package]
name = "auto-launch"
version = "0.5.0"
edition = "2021"
authors = ["zzzgydi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzgydi/auto-launch.git"
keywords = ["launch", "auto-launch", "startup", "login", "login-items"]
description = "Auto launch any application or executable at startup. Supports Windows, macOS, and Linux."
exclude = ["/test-exe"]

[dependencies]
thiserror = "2"

[target."cfg(not(target_os = \"windows\"))".dependencies]
dirs = "5.0.1"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.3.0"
